c4prj1_deck/grade.txt
Grading at Sun Mar  7 18:23:34 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:8:37: error: expected ‘)’ before ‘;’ token
   card_t * ptr = malloc(sizeof(*ptr);
                                     ^
deck.c:13:1: error: expected ‘,’ or ‘;’ before ‘}’ token
 }
 ^
deck.c:15:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t * add_empty_card(deck_t * deck){
 ^
deck.c:23:1: error: ISO C forbids nested functions [-Werror=pedantic]
 deck_t * make_deck_exclude(deck_t * excluded_cards){
 ^
deck.c:35:1: error: ISO C forbids nested functions [-Werror=pedantic]
 deck_t * build_remaining_deck(deck_t ** hands, size_t n_hands){
 ^
deck.c:40:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void free_deck(deck_t * deck){
 ^
deck.c:45:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void print_hand(deck_t * hand){
 ^
deck.c:53:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int deck_contains(deck_t * d, card_t c) {
 ^
deck.c:62:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void shuffle(deck_t * d){
 ^
deck.c:72:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void assert_full_deck(deck_t * d) {
 ^
deck.c:78:1: error: expected declaration or statement at end of input
 }
 ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
